--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <section id="baseurl" class="section">
                 <h2>🔗 Base URL</h2>
                 <div class="code-block">
-                    <code>http://localhost:3000</code>
+                    <code>https://restapi-yw9p.onrender.com</code>
                 </div>
             </section>
 
